Bug: PRD Reviewer: Lynn comment: minor CSS change: removed the padding-top style on the breadcrumb image so the text and image align better.

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -2453,7 +2453,6 @@ body, table td, select
 {
 	height: 10px;
 	width: 10px;
-	padding-top: 3px;
 }
 .breadCrumb_ContentNode_Filr
 {
